--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <div id="loaderRoot"></div>
+    <div id="modalRoot"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
